--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-responsive": "^9.0.2",
     "react-router": "^6.13.0"
   },
   "devDependencies": {
