--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0"
