--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react-responsive": "^9.0.2",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
