--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-responsive": "^9.0.2",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
