--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
