--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
