--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-responsive": "^9.0.2",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
@@ -26,6 +27,7 @@
     "@types/matchmediaquery": "^0.3.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
