--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@headlessui/react": "^1.7.15",
     "axios": "^1.4.0",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/matchmediaquery": "^0.3.0",
+    "@types/node": "^20.12.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-lazy-load-image-component": "^1.5.3",
